# wifi_qr_code

wifi_qr_code_generator/: pyproject.toml  setup.py
wifi_qr_code_generator/qrwifi.egg-info/: requires.txt
wifi_qr_code_generator/tests/: test_wifi_qr_code_generator.py
wifi_qr_code_generator/wifi_qr_code_generator/: cli.py  functions.py
