[tool.poetry]
name = "wifi_qr_code_generator"
version = "0.1.0"
description = ""
authors = ["James <54590378+jamiddle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
